# serverless-pizza-ordering

./: .gitignore  README.md
ordering-backend/: .gitignore  template.yaml
ordering-backend/apis/: pizza-ordering-api-openapi-definition-json.tpl
ordering-backend/containers/fargate_rust_order_delivery/: Cargo.toml  Dockerfile  create_ecr_and_push.sh
ordering-backend/containers/fargate_rust_order_delivery/src/: main.rs
ordering-backend/containers/fargate_rust_order_processor/: Cargo.toml  Dockerfile  create_ecr_and_push.sh
ordering-backend/containers/fargate_rust_order_processor/src/: main.rs
ordering-backend/ecs-tasks/: container-definition-delivery.json.tpl  container-definition-processor.json.tpl
ordering-backend/functions/create_order/: app.py  requirements.txt  test.py
ordering-backend/functions/get_order_status/: app.py  requirements.txt
ordering-backend/functions/process_dynamodb_stream/: app.py  requirements.txt
ordering-backend/state-machines/: step-function-json.tpl
ordering-backend/terraform/: .terraform.lock.hcl  api.tf  cognito.tf  dynamodb.tf  ecs.tf  infra.tf  lambda.tf  outputs.tf  stepfunctions.tf  variables.tf
ordering-frontend/: .gitignore  package-lock.json  package.json  sample-env
ordering-frontend/public/: index.html
ordering-frontend/src/: App.js  common.css  index.js
ordering-frontend/src/components/: Cart.js  Checkout.js  Header.js  Home.js  OrderProgressBar.css  OrderProgressBar.js  Product.js  ProductDetail.js  ProductList.js  Profile.js
ordering-frontend/src/context/: CartContext.js
