[package]
edition = "2021"
name = "fargate_rust_order_processor"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = {version = "1.1.1", features = ["behavior-version-latest"]}
aws-sdk-s3 = "1.11.0"
aws-sdk-dynamodb = "1.11.0"
aws-sdk-sfn = "1.9.0"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
tokio = {version = "1.35.1", features = ["full"]}
